--- a/aurora-db/package.json
+++ b/aurora-db/package.json
@@ -14,11 +14,13 @@
     "@aws-sdk/client-dynamodb": "^3.758.0",
     "@aws-sdk/client-s3": "^3.797.0",
     "@aws-sdk/lib-dynamodb": "^3.758.0",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "lodash": "^4.17.21",
     "pg": "^8.14.0",
     "serverless-dotenv-plugin": "^6.0.0",
     "serverless-pseudo-parameters": "^2.6.1",
+    "stream-json": "^1.9.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
