--- a/api-functions/serverless.yml
+++ b/api-functions/serverless.yml
@@ -26,6 +26,7 @@ custom:
   submissionsTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.SUBMISSIONS_TABLE}
   profilingTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.PROFILING_TABLE}
   fiddleTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.FIDDLES_TABLE}
+  quizzesTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.QUIZZES_TABLE}
 
   COGNITO_CALLBACK_URLS:
     dev:
@@ -68,6 +69,7 @@ provider:
     DB_TOOLS_METRICES_TABLE: db-kompare-dbtools-metrices-${self:provider.stage}
     DB_TOOLS_RANKINGS_TABLE: db-kompare-dbtools-rankings-${self:provider.stage}
     QUESTIONS_TABLE: db-kompare-questions-${self:provider.stage}
+    QUIZZES_TABLE: db-kompare-quizzes-${self:provider.stage}
     TAGS_TABLE: db-kompare-tags-${self:provider.stage}
     COMPANIES_TABLE: db-kompare-companies-${self:provider.stage}
     DATABASE_AGGREGATED_TABLE: db-kompare-database-aggregated-${self:provider.stage}
@@ -116,6 +118,8 @@ provider:
             - ${self:custom.profilingTableArn}/index/*
             - ${self:custom.fiddleTableArn}
             - ${self:custom.fiddleTableArn}/index/*
+            - ${self:custom.quizzesTableArn}
+            - ${self:custom.quizzesTableArn}/index/*
             - ${self:custom.questionsTableArn}
             - ${self:custom.databaseAggregationTableArn}
             - ${self:custom.dbToolsAggregationTableArn}
@@ -673,6 +677,52 @@ functions:
     events:
       - http:
           path: question/{id}
+          method: delete
+          private: true
+          cors: true
+
+  ## --------- Quizzes functions---------
+  createQuiz:
+    handler: functions/quizzes/createQuiz.handler
+    events:
+      - http:
+          path: /create-quiz
+          method: post
+          private: true
+          cors: true
+
+  getQuizzes:
+    handler: functions/quizzes/getQuizzes.handler
+    events:
+      - http:
+          path: /get-quizzes
+          method: get
+          private: true
+          cors: true
+
+  getSingleQuiz:
+    handler: functions/quizzes/getSingleQuiz.handler
+    events:
+      - http:
+          path: quiz/{id}
+          method: get
+          private: true
+          cors: true
+
+  updateQuiz:
+    handler: functions/quizzes/updateQuiz.handler
+    events:
+      - http:
+          path: quiz/{id}
+          method: put
+          private: true
+          cors: true
+
+  deleteQuiz:
+    handler: functions/quizzes/deleteQuiz.handler
+    events:
+      - http:
+          path: quiz/{id}
           method: delete
           private: true
           cors: true
