Add quiz submissions functionality with DynamoDB integration and API endpoints

--- a/api-functions/serverless.yml
+++ b/api-functions/serverless.yml
@@ -27,6 +27,7 @@ custom:
   profilingTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.PROFILING_TABLE}
   fiddleTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.FIDDLES_TABLE}
   quizzesTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.QUIZZES_TABLE}
+  quizzesSubmissionsTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.QUIZZES_SUBMISSIONS_TABLE}
 
   COGNITO_CALLBACK_URLS:
     dev:
@@ -70,6 +71,7 @@ provider:
     DB_TOOLS_RANKINGS_TABLE: db-kompare-dbtools-rankings-${self:provider.stage}
     QUESTIONS_TABLE: db-kompare-questions-${self:provider.stage}
     QUIZZES_TABLE: db-kompare-quizzes-${self:provider.stage}
+    QUIZZES_SUBMISSIONS_TABLE: db-kompare-quiz-submissions-${self:provider.stage}
     TAGS_TABLE: db-kompare-tags-${self:provider.stage}
     COMPANIES_TABLE: db-kompare-companies-${self:provider.stage}
     DATABASE_AGGREGATED_TABLE: db-kompare-database-aggregated-${self:provider.stage}
@@ -120,6 +122,8 @@ provider:
             - ${self:custom.fiddleTableArn}/index/*
             - ${self:custom.quizzesTableArn}
             - ${self:custom.quizzesTableArn}/index/*
+            - ${self:custom.quizzesSubmissionsTableArn}
+            - ${self:custom.quizzesSubmissionsTableArn}/index/*
             - ${self:custom.questionsTableArn}
             - ${self:custom.databaseAggregationTableArn}
             - ${self:custom.dbToolsAggregationTableArn}
@@ -690,6 +694,14 @@ functions:
           method: post
           private: true
           cors: true
+  createQuizSubmission:
+    handler: functions/quizzes-submissions/createQuizSubmission.handler
+    events:
+      - http:
+          path: /create-quiz-submission
+          method: post
+          private: true
+          cors: true
 
   getQuizzes:
     handler: functions/quizzes/getQuizzes.handler
@@ -705,6 +717,15 @@ functions:
     events:
       - http:
           path: quiz/{id}
+          method: get
+          private: true
+          cors: true
+
+  getSingleQuizSubmission:
+    handler: functions/quizzes-submissions/getSingleQuizSubmission.handler
+    events:
+      - http:
+          path: quiz-submission/{id}
           method: get
           private: true
           cors: true
