--- a/api-functions/package.json
+++ b/api-functions/package.json
@@ -17,9 +17,10 @@
     "dotenv": "^16.4.5",
     "moment": "^2.30.1",
     "p-limit": "^6.1.0",
+    "pdf-lib": "^1.17.1",
     "serverless-offline": "^14.3.4",
-    "uuid": "^11.0.3",
-    "xlsx": "^0.18.5"
+    "short-unique-id": "^5.3.2",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "serverless-dotenv-plugin": "^6.0.0"
