--- a/resources/serverless.yml
+++ b/resources/serverless.yml
@@ -363,6 +363,35 @@ resources:
                 KeyType: HASH # GSI partition key for querying quizzes by category
             Projection:
               ProjectionType: ALL
+    QuizzesQuestions:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: db-kompare-quizzes-questions-${self:provider.stage}
+        BillingMode: PAY_PER_REQUEST
+        DeletionProtectionEnabled: true
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S # Primary key as string
+          - AttributeName: category
+            AttributeType: S # Used for querying by category
+          - AttributeName: status
+            AttributeType: S # GSI for querying by status
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH # Primary partition key
+        GlobalSecondaryIndexes:
+          - IndexName: byCategory
+            KeySchema:
+              - AttributeName: category
+                KeyType: HASH # GSI partition key for querying quizzes by category
+            Projection:
+              ProjectionType: ALL
+          - IndexName: byStatus
+            KeySchema:
+              - AttributeName: status
+                KeyType: HASH # GSI partition key for querying quizzes by category
+            Projection:
+              ProjectionType: ALL
     QuizSubmissions:
       Type: AWS::DynamoDB::Table
       Properties:
