Enhance category handling and quiz functionality
- Normalize category names to lowercase and preserve original display names.
- Add questionIds to quiz creation for better tracking.
- Fetch category details for quiz questions and handle empty states.
- Introduce batch processing for quiz question creation to optimize performance.
- Update serverless configuration to support new category queries.

--- a/resources/serverless.yml
+++ b/resources/serverless.yml
@@ -403,6 +403,8 @@ resources:
             AttributeType: S # Primary key as string
           - AttributeName: status
             AttributeType: S # GSI for querying by status
+          - AttributeName: name
+            AttributeType: S # GSI for querying by name
         KeySchema:
           - AttributeName: id
             KeyType: HASH # Primary partition key
@@ -410,6 +412,12 @@ resources:
           - IndexName: byStatus
             KeySchema:
               - AttributeName: status
+                KeyType: HASH 
+            Projection:
+              ProjectionType: ALL
+          - IndexName: byName
+            KeySchema:
+              - AttributeName: name
                 KeyType: HASH 
             Projection:
               ProjectionType: ALL
