Refactor quiz handling: integrate fetchQuizWithQuestions function, update quiz question retrieval, and enhance category management

--- a/api-functions/serverless.yml
+++ b/api-functions/serverless.yml
@@ -818,6 +818,15 @@ functions:
           private: true
           cors: true
 
+  getSingleCategory:
+    handler: functions/categories/getSingleCategory.handler
+    events:
+      - http:
+          path: category/{id}
+          method: get
+          private: true
+          cors: true
+
   updateCategory:
     handler: functions/categories/updateCategory.handler
     events:
