--- a/comment/package.json
+++ b/comment/package.json
@@ -16,6 +16,7 @@
     "uuid": "^11.0.3"
   },
   "devDependencies": {
-    "serverless-dotenv-plugin": "^6.0.0"
+    "serverless-dotenv-plugin": "^6.0.0",
+    "serverless-prune-plugin": "^2.1.0"
   }
 }
