--- a/comment/serverless.yml
+++ b/comment/serverless.yml
@@ -9,12 +9,15 @@ custom:
   lambdaInitialArn: arn:aws:lambda:${self:provider.region}:${aws:accountId}:function:${self:service}-${self:provider.stage}
   commentsTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.COMMENTS_TABLE}
   usersTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.USERS_TABLE}
+  quizProgressTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.QUIZ_PROGRESS_TABLE}
+
   serverless-offline:
     httpPort: 4000
 
 plugins:
   - serverless-dotenv-plugin
   - serverless-offline
+  - serverless-prune-plugin
 
 provider:
   name: aws
@@ -22,9 +25,11 @@ provider:
   region: eu-west-1
   stage: ${opt:stage, 'dev'}
   profile: dbkompare
+  versionFunctions: false
   environment:
     COMMENTS_TABLE: db-kompare-comments-${self:provider.stage}
     USERS_TABLE: db-kompare-users-${self:provider.stage}
+    QUIZ_PROGRESS_TABLE: db-kompare-user-quiz-progress-${self:provider.stage}
 
   apiGateway:
     apiKeys:
@@ -47,9 +52,8 @@ provider:
             - ${self:custom.commentsTableArn} # Permission for comments table
             - ${self:custom.usersTableArn} # Permission for users table
             - ${self:custom.commentsTableArn}/index/* # Permission for comments table indexes
-            #   - ${self:custom.databasesTableArn}/index/byStatus
-            #   - ${self:custom.metricesTableArn}/index/byStatusAndDate
-            #   - ${self:custom.databaseRankingTableArn}/index/byStatusAndDate
+            - ${self:custom.quizProgressTableArn} # Permission for quiz progress table
+            - ${self:custom.quizProgressTableArn}/index/* # Permission for quiz progress table indexes
 
 functions:
   createComment:
@@ -98,5 +102,22 @@ functions:
       - http:
           path: /db-rating
           method: post
+          private: true
+          cors: true
+
+  createQuizProgress:
+    handler: functions/quizzes/createQuizProgress.handler
+    events:
+      - http:
+          path: /create-quiz-progress
+          method: post
+          private: true
+          cors: true
+  getQuizProgress:
+    handler: functions/quizzes/getQuizProgress.handler
+    events:
+      - http:
+          path: /get-quiz-progress
+          method: get
           private: true
           cors: true
