Add updateQuizProgress function: implement handler for updating quiz progress and configure serverless function

--- a/comment/serverless.yml
+++ b/comment/serverless.yml
@@ -121,3 +121,12 @@ functions:
           method: get
           private: true
           cors: true
+          
+  updateQuizProgress:
+    handler: functions/quizzes/updateQuizProgress.handler
+    events:
+      - http:
+          path: /update-quiz-progress
+          method: put
+          private: true
+          cors: true
