--- a/api-functions/package.json
+++ b/api-functions/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "bottleneck": "^2.19.5",
     "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "p-limit": "^6.1.0",
     "pdf-lib": "^1.17.1",
